Add threshold for created CPEs in CLI and an arg to customize it
